# liz

./: .gitignore  Cargo.toml  LICENSE  README.md  sqlx-data.json
.sqlx/: query-3dd5ced93a0ef5744cd8b67aa9e1e96bd55df4b618af432e9f891fc7fee3d33a.json  query-6db2b64302bb0b8e6e05277873f818069a34ca948932b94a674efc5d9748ebcf.json  query-98c239a3934d5c59d5625e8a519aceb4b3c9382cbdb6daea0066a06e3da79d55.json  query-f03f69112a5b67e25ee80dcba8cc029ddca44c09763b70aec1e79243639d4efe.json
migrations/: 20230713140231_create_sessions_table.sql
scripts/: init_postgres.sh
src/: bot.rs  eval.rs  main.rs
