[package]
name = "lisbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
shuttle-serenity = "0.21.0"
shuttle-runtime = "0.21.0"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.21.0"
tokio = "1.26.0"
tracing = "0.1.37"
rust_lisp = "0.18.0"
shuttle-shared-db = { version = "0.21.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
serde = "1.0.171"
names = { version = "0.14.0", default-features = false }
